--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 p{
     color:navajowhite;
 }
+
+h1{
+    background-color: skyblue;
+}
+h3{
+    color: steelblue;
+}
+h2{
+    color: turquoise;
+}
